fix spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ thead {
   border-style: none !important;
   border-width: 0px !important;
   border-color: transparent !important;
-  padding: 15px 20px !important;
+  padding: 15px 10px !important;
 }
 
 thead th:first-child {
